[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/audio_manager.gd" type="Script" id=1]
[ext_resource path="res://src/track_manager.gd" type="Script" id=2]
[ext_resource path="res://nodes/TrackManager.tscn" type="PackedScene" id=3]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="AudioManager" type="Node"]
script = ExtResource( 1 )

[node name="recorder" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[node name="TrackManager" parent="." instance=ExtResource( 3 )]
script = ExtResource( 2 )

[node name="CursorTimer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="timeout" from="CursorTimer" to="." method="_on_CursorTimer_timeout"]
